# hello-pdm

./: .pdm-python  Makefile  README.md  pyproject.toml
docs/: tutorial.md
src/hello_pdm/: __init__.py  __main__.py  fun.py  main2.py  requests_example.py  some_script2.py
