[project]
name = "hello-pdm"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "nalbarr", email = "nalbarracin@gmail.com"},
]
dependencies = []
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
