[project]
name = "hello-pdm"
version = "0.1.0"
description = "Default template for PDM package"
# authors = [
#    {name = "", email = ""},
# ]
dependencies = [
    "requests>=2.31.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project.scripts]
hello-pdm = "hello_pdm.fun:main"

[tool.pdm]
distribution = true
